修改博客主题

--- a/themes/hexo-theme-xups/layout/_partial/header.ejs
+++ b/themes/hexo-theme-xups/layout/_partial/header.ejs
@@ -37,7 +37,7 @@
                         <b>■</b>
                         公众号
                         <span class="popover">
-                            <img src="<%= url_for('img/wechat_mp.jpg') %>" width="120" height="120" alt="我的微信订阅号">
+                            <img src="<%= url_for('img/wechat_mp.jpg') %>" width="120" height="120" alt="六楼实验室微信订阅号">
                             <i class="arrow"></i>
                         </span>
                     </a>
