--- a/themes/hexo-theme-xups/layout/_partial/footer.ejs
+++ b/themes/hexo-theme-xups/layout/_partial/footer.ejs
@@ -1,11 +1,6 @@
 <footer class="footer">
-    &copy;
-    <% if (new Date().getFullYear() == 2016) { %>
-        <%- new Date().getFullYear() %>
-    <% } else { %>
-        2016-<%- new Date().getFullYear() %>
-    <% } %>
+    &copy; 2015-<%- new Date().getFullYear() %>
 
-    <a href="<%- url_for() %>">Jelon Loves You</a>
+    <a href="<%- url_for() %>">Sixlab</a> | 豫ICP备15033629号
 </footer>
 <div class="back-to-top" id="JELON__backToTop" title="返回顶部">返回顶部</div>
