--- a/themes/hexo-theme-tranquilpeak/layout/_partial/head.ejs
+++ b/themes/hexo-theme-tranquilpeak/layout/_partial/head.ejs
@@ -159,10 +159,7 @@
         <% }) %>
     <% } %>
     <!--STYLES-->
-    <%- css('assets/css/all.css') %>
-    <%- css('assets/css/jquery.fancybox.css') %>
-    <%- css('assets/css/thumbs.css') %>
-    <%- css('assets/css/tranquilpeak.css') %>
+    <%- css('assets/css/style-du2xmrqdqrl2ollgeiw050kpl6l4nbyz7bumjuurjgsxyopifvukebxc9lqe.min.css') %>
     <!--STYLES END-->
     <%- partial('google-analytics') %>
     <%- partial('baidu-analytics') %>
