--- a/themes/hexo-theme-tranquilpeak/layout/_partial/post.ejs
+++ b/themes/hexo-theme-tranquilpeak/layout/_partial/post.ejs
@@ -1,16 +1,17 @@
 <%
-    var tableOfContents = null;
+    var tableOfContents = '';
     var postContent = post.content;
 
     // Generate and insert table of contents in post content
-    if ((/<!--(\s*)[t|T][o|O][c|C](\s*)-->/).test(postContent)) {
+    if (post.toc) {
+        tableOfContents = '<div style="position: fixed;right: 300px;">';
         if (__('post.toc')) {
-            tableOfContents = '<h1 id=\"table-of-contents\">' + __('post.toc') + '</h1>';
+            tableOfContents += '<h1 id=\"table-of-contents\">' + __('post.toc') + '</h1>';
         } else {
-            tableOfContents = '<span id="table-of-contents"></span>';
+            tableOfContents += '<span id="table-of-contents"></span>';
         }
         tableOfContents += toc(postContent, {list_number: false})
-        postContent = postContent.replace(/<!--(\s*)[t|T][o|O][c|C](\s*)-->/, tableOfContents)
+        tableOfContents += '</div>'
     }
     // Replace `<!-- endcontent -->` by `</div>` and `<!-- content -->` by `</div class="main-content-wrap">`
     // it's an hack to insert html tag without
@@ -28,6 +29,7 @@
         <%- partial('post/header')%>
     <% } %>
     <div class="post-content markdown">
+        <%- tableOfContents %>
         <div class="main-content-wrap">
             <%- postContent %>
             <%- partial('post/gallery') %>
