主题应该 ok 了，明天合并一下那边的代码，就 ok 了

--- a/themes/hexo-theme-tranquilpeak/layout/_partial/post.ejs
+++ b/themes/hexo-theme-tranquilpeak/layout/_partial/post.ejs
@@ -1,16 +1,17 @@
 <%
-    var tableOfContents = null;
+    var tableOfContents = '';
     var postContent = post.content;
 
     // Generate and insert table of contents in post content
-    if ((/<!--(\s*)[t|T][o|O][c|C](\s*)-->/).test(postContent)) {
+    if (post.toc) {
+        tableOfContents = '<div id="main-content-toc"><div id="toc-content">';
         if (__('post.toc')) {
-            tableOfContents = '<h1 id=\"table-of-contents\">' + __('post.toc') + '</h1>';
+            tableOfContents += '<h1 id="table-of-contents">' + __('post.toc') + '</h1>';
         } else {
-            tableOfContents = '<span id="table-of-contents"></span>';
+            tableOfContents += '<span id="table-of-contents"></span>';
         }
-        tableOfContents += toc(postContent, {list_number: false})
-        postContent = postContent.replace(/<!--(\s*)[t|T][o|O][c|C](\s*)-->/, tableOfContents)
+        tableOfContents += toc(postContent, {list_number: false});
+        tableOfContents += "</div></div>";
     }
     // Replace `<!-- endcontent -->` by `</div>` and `<!-- content -->` by `</div class="main-content-wrap">`
     // it's an hack to insert html tag without
@@ -19,6 +20,7 @@
     // which center the content and have a limited width (750px)
     postContent = postContent.replace(/<!-- ?endcontent ?-->/g, '</div>')
                                .replace(/<!-- ?content ?-->/g, '<div class="main-content-wrap">');
+    postContent = '<div id="main-content-post">' + postContent + '</div>';
 %>
 <article class="post">
     <% if (post.coverCaption) { %>
@@ -29,6 +31,7 @@
     <% } %>
     <div class="post-content markdown">
         <div class="main-content-wrap">
+            <%- tableOfContents %>
             <%- postContent %>
             <%- partial('post/gallery') %>
         </div>
