--- a/themes/hexo-theme-tranquilpeak/source/assets/css/style.css
+++ b/themes/hexo-theme-tranquilpeak/source/assets/css/style.css
@@ -2636,6 +2636,17 @@ a.fancybox {
   padding-right: 20px;
   padding-left: 20px; }
 
+#main-content-toc {
+  float: right;
+  position: relative;
+  padding-left: 30px;
+  min-height: 1px; }
+
+#toc-content {
+  position: fixed;
+  overflow-x: hidden;
+  width: 20%; }
+
 @media only screen and (min-width: 1024px) {
   .markdown h1 {
     font-size: 3rem; }
