--- a/themes/hexo-theme-tranquilpeak/source/_css/layouts/_about.scss
+++ b/themes/hexo-theme-tranquilpeak/source/_css/layouts/_about.scss
@@ -59,6 +59,9 @@
             font-weight: 400;
             color:       map-get($colors, base);
         }
+        .pay-qr{
+            width: 150px;
+        }
     }
 }
 
