--- a/themes/hexo-theme-tranquilpeak/layout/_partial/post.ejs
+++ b/themes/hexo-theme-tranquilpeak/layout/_partial/post.ejs
@@ -10,7 +10,7 @@
         } else {
             tableOfContents += '<span id="table-of-contents"></span>';
         }
-        tableOfContents += toc(postContent, {list_number: false});
+        tableOfContents += toc(postContent, {list_number: post.tocNumber});
         tableOfContents += "</div></div>";
     }
     // Replace `<!-- endcontent -->` by `</div>` and `<!-- content -->` by `</div class="main-content-wrap">`
@@ -20,6 +20,9 @@
     // which center the content and have a limited width (750px)
     postContent = postContent.replace(/<!-- ?endcontent ?-->/g, '</div>')
                                .replace(/<!-- ?content ?-->/g, '<div class="main-content-wrap">');
+    if( moment().diff(post.date)/(1000*60*60*24*366.0) >=3 && !post.valid){
+        postContent = '<div class="alert warning no-icon"><p>声明：本文已超过三年，内容可能已过时</p></div>' + postContent;
+    }
     postContent = '<div id="main-content-post">' + postContent + '</div>';
 %>
 <article class="post">
