样式微调，剩下图片、目录、缩略图处理、代码高亮、第三方链接

--- a/themes/hexo-theme-tranquilpeak/source/_css/components/_postShorten.scss
+++ b/themes/hexo-theme-tranquilpeak/source/_css/components/_postShorten.scss
@@ -70,6 +70,12 @@
     }
     .postShorten-excerpt {
         margin-top: 15px;
+
+        .toc{
+            ol,ul,li{
+                list-style-type: none;
+            }
+        }
     }
     .postShorten-content {
         margin-top: 25px;
